--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-boost": "^0.4.9",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
